--- a/package.json
+++ b/package.json
@@ -10,7 +10,8 @@
     "prisma:migrate": "prisma migrate dev",
     "prisma:studio": "prisma studio",
     "seed": "tsx scripts/seed.ts",
-    "postinstall": "prisma generate"
+    "postinstall": "prisma generate",
+    "postbuild": "next-sitemap" 
   },
   "dependencies": {
     "@auth/prisma-adapter": "^2.10.0",
@@ -20,6 +21,7 @@
     "lucide-react": "^0.539.0",
     "next": "14.2.5",
     "next-auth": "^5.0.0-beta.20",
+    "next-sitemap": "^4.2.3",
     "react": "18.3.1",
     "react-dom": "18.3.1",
     "react-icons": "^5.5.0",
