--- a/package.json
+++ b/package.json
@@ -2,18 +2,16 @@
   "name": "chartgame",
   "private": true,
   "scripts": {
-  "dev": "next dev",
-  "build": "prisma migrate deploy && next build",
-  "vercel-build": "prisma migrate deploy && next build && next-sitemap --config next-sitemap.config.js",
-  "start": "next start",
-  "prisma:generate": "prisma generate",
-  "prisma:migrate": "prisma migrate dev",
-  "prisma:studio": "prisma studio",
-  "seed": "tsx scripts/seed.ts",
-  "postinstall": "prisma generate",
-  "postbuild": "next-sitemap --config next-sitemap.config.js"
-}
-,
+    "dev": "next dev",
+    "build": "prisma migrate deploy && next build && next-sitemap --config next-sitemap.config.js",
+    "vercel-build": "prisma migrate deploy && next build && next-sitemap --config next-sitemap.config.js",
+    "start": "next start",
+    "prisma:generate": "prisma generate",
+    "prisma:migrate": "prisma migrate dev",
+    "prisma:studio": "prisma studio",
+    "seed": "tsx scripts/seed.ts",
+    "postinstall": "prisma generate"
+  },
   "dependencies": {
     "@auth/prisma-adapter": "^2.10.0",
     "@prisma/client": "^6.15.0",
