--- a/package.json
+++ b/package.json
@@ -3,8 +3,8 @@
   "private": true,
   "scripts": {
     "dev": "next dev",
-    "build": "prisma migrate deploy && next build && next-sitemap --config next-sitemap.config.js",
-    "vercel-build": "prisma migrate deploy && next build && next-sitemap --config next-sitemap.config.js",
+    "build": "prisma migrate deploy && next build",
+    "vercel-build": "prisma migrate deploy && next build",
     "start": "next start",
     "prisma:generate": "prisma generate",
     "prisma:migrate": "prisma migrate dev",
@@ -20,7 +20,6 @@
     "lucide-react": "^0.539.0",
     "next": "14.2.5",
     "next-auth": "^5.0.0-beta.20",
-    "next-sitemap": "^4.2.3",
     "react": "18.3.1",
     "react-dom": "18.3.1",
     "react-icons": "^5.5.0",
