--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@auth/prisma-adapter": "^2.10.0",
     "@prisma/client": "^6.15.0",
     "dayjs": "^1.11.13",
+    "framer-motion": "^12.23.22",
     "iconv-lite": "^0.7.0",
     "lucide-react": "^0.539.0",
     "next": "14.2.5",
